syntax = "proto3";
package cluster;

import "protoactor/actor/protos.proto";

message TakeOwnership {
    actor.PID pid = 1;
    string name = 2;
}

message GrainRequest {
    int32 method_index = 1;
    bytes message_data = 2;
}

message GrainResponse {
    bytes message_data = 1;
}

message GrainErrorResponse {
    string err = 1;
}